docs/home/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

*{
  padding: 0;
  color: #E5E5E5;
  margin: 0;
  box-sizing: border-box;
}

ul {
  list-style: none;
}


body {
  font-family: 'Roboto', sans-serif;
  word-spacing: 1px;
  font-size: 1.2em;
  overflow: auto;
  padding: 0;
  height: 100vh;
  width: 100%;
  background-color: #151515;
}

header {
  width: 100%;
  padding: 50px 0;
  padding-right: 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

section {
  padding: 100px 0;
  height: 60vh;
}

button {
  cursor: pointer;
}

.community-call-label {
  width: 50%;
  font-size: 1.5rem;
  font-weight: bold;
  margin-left: 2rem;
}

.discord-wrapper {
  width: 100%;
  background: linear-gradient(rgba(51, 52, 92, 0.4), transparent);
  padding: 4% 40px;
}

.discord-split {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.join-discord-call {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  padding: 10px 0;
}

.section-phrase {
  font-size: 1.1rem;
  font-weight: 100;
  margin-top: 10px;
}

.projects {
  height: 350px;
  width: 350px;
  display: grid;
  grid-template-rows: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  grid-gap: 0.75rem;
  margin-left: 2rem;
}

.maintainers {
  width: 50%;
  height: auto;
  max-width: 400px;
  max-height: 300px;
  display: flex;
  flex-wrap: wrap;
  overflow-y: auto;
  scrollbar-width: 3px;
  scrollbar-color: #343587 transparent;
  padding: 10px;
}

.maintainers::-webkit-scrollbar {
  width: 4px;
}

.maintainers::-webkit-scrollbar-track {
  background: transparent;
}

.maintainers::-webkit-scrollbar-thumb {
  background-color: #343587;
  border-radius: 20px;
}

.maintainer {
  width: 4rem;
  height: 4rem;
  background-color: #343587;
  border-radius: 50%;
  margin: 0px 15px 15px 0;
  overflow: hidden;
  transition: transform .2s;
}

.maintainer:hover {
  transform: scale(1.2);
}

.maintainer > img {
  width: 100%;
  height: 100%;
}

.project {
  width: 100%;
  height: 100%;
  transition: 0.2s ease;
  background-color: white;
  display: flex;
}

.project:hover {
  transform: scale(1.04);
}

.project > a {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
}

.project img {
  width: 100%;
  height: 100%;
}

.section-split {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.line {
  margin: 10px 0;
  width: 30px;
  height: 5px;
  background-color: #343587;
}

.join-community-call {
  width: 100%;
  display: flex;
  flex-direction: row;
  padding: 40px 10%;
}

.join-community-phrase {
  width: 60%;
  text-align: right;
  font-size: 1rem;
  padding-right: 3%;
  padding-left: 10%;
  letter-spacing: 0.5px;
  font-weight: 300;
}

.join-community-button {
    width: 40%;
}

.default-button {
  background-color: #343587;
  border: none;
  padding: 7px 25px;
  border-radius: 4px;
  font-weight: bold;
  transition: .2s ease;
}

.default-button:hover {
  transform: scale(1.04);
  background-color: #fff;
  color: #343587;
}
.discord-button {
  background-color: #7289da;
}

.discover-button {
  font-size: 1.2rem;
  padding: 10px 25px;
  font-weight: bolder;
}

.button-area {
  width: 20%;
}

.blue-color {
  color: #343587;
}

.discord-color {
  color: #7289da;
}

.logo {
  width: 260px;
}

.join-discord {
  font-size: 2.8rem;
  letter-spacing: 1px;
  color: #E5E5E5;
  margin: 0;
}

.join-community {
  text-align: center;
  font-size: 2.8rem;
  letter-spacing: 1px;
  color: #E5E5E5;
  margin: 0;
  padding: 0 1rem;
}

.container {
  position: relative;
  width: 100%;
  max-width: 1360px;
  min-height: 100vh;
  margin: auto;
}

.content-area {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 50;
  padding: 0 150px;
}

.gradient {
  background: radial-gradient(rgba(52, 53, 135, .4), rgba(21, 21, 21, .4) 70%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5e8b8b8b', endColorstr='#ffffff',GradientType=1 );
    text-shadow: 2px 2px 0px #FFF;
  height: 100%;
  width: 100%;
  margin: auto;
  position: absolute;
  z-index: 0;
}

@media (max-width: 990px) {
  header {
    padding-left: 30px;
  }

  section {
    height: fit-content;
  }

  .content-area {
    padding: 0;
  }

  .section-split {
    flex-direction: column;
  }

  .column-reverse {
    flex-direction: column-reverse;
  }

  .community-call-label {
    margin-bottom: 50px;
  }

  .maintainers {
    max-height: none;
    justify-content: center;
  }

  .maintainer {
    width: 3rem;
    height: 3rem;
  }

  .projects {
    margin-left: 0;
  }
}

@media (max-width: 574px) {
  .join-community-call {
    flex-direction: column;
    align-items: center;
  }

  .community-call-label {
    width: 70%;
  }

  .join-community-phrase {
    text-align: center;
    padding: 0;
    margin-bottom: 20px;
  }

  .join-community-button {
    width: 100%;
    text-align: center;
    justify-content: center;
  }

  .discord-split {
    grid-template-rows: 1fr 1fr;
    grid-template-columns: auto;
  }

  header {
    flex-direction: column;
  }

  .button-area {
    visibility: hidden;
  }

  .maintainers {
    width: 70%;
  }

  .projects {
    width: 80vw;
    height: auto;
  }
}

/* hacktoberfest */

@font-face {
  font-family: 'retro-gaming';
  src: url('../../hacktoberfest/assets/fonts/Retro Gaming.ttf');
}

.hacktoberfest-event {
  font-family: 'retro-gaming';
  background: #24224f;
  color: #fff;
  height: 10vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  text-align: center;
  padding: 10px;
}

.hacktoberfest-event:hover {
  color: #9fef00;
}

@media screen and (max-width:768px) {
  .hacktoberfest-event h2 {
    font-size: 1em;
  }
}

